# Multi-part-SMS-PDU-generator

./: .gitignore  CMakeLists.txt  README.md  sample1.c
pdu_codec/: LICENSE  pdu.c  pdu_codec.c  pdu_codec.h  pdu_test  pdu_test.c  sample.c  test.c  test_long_msg.c
pdu_codec/smstools3/: LICENSE  encode.c  main2.c  pdu  pdu.c  pdu2  smsd.c  stats.c  testing
smstools3/: alarm.c  alarm.h  blacklist.c  blacklist.h  cfgfile.c  cfgfile.h  charset.c  charset.h  encode.c  extras.c  extras.h  locking.c  locking.h  logging.c  logging.h  modeminit.c  modeminit.h  pdu.c  pdu.h  smsd.c  smsd_cfg.c  smsd_cfg.h  smspdu.c  smspdu.h  stats.c  stats.h  whitelist.c  whitelist.h
